--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,8 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+mc_version=1.18.2
+jei_version=10.+
+crt_version=9.+
+top_version=1.18-5.1.+
