--- a/gradle.properties
+++ b/gradle.properties
@@ -6,3 +6,6 @@ org.gradle.daemon=false
 mc_version=1.18.2
 jei_version=9.+
 crt_version=9.+
+top_version=3965688
+jade_version=4035581
+jade_version_api=4035583
