--- a/gradle.properties
+++ b/gradle.properties
@@ -9,3 +9,6 @@ crt_version=9.+
 top_version=3965688
 jade_version=4035581
 jade_version_api=4035583
+kubejs_version=1802.5.5-build.560
+rhino_version=1802.2.1-build.255
+architectury_version=4.10.86
