--- a/build.gradle
+++ b/build.gradle
@@ -138,6 +138,9 @@ dependencies {
     implementation fg.deobf("dev.latvian.mods:rhino-forge:${rhino_version}")
     implementation fg.deobf("dev.architectury:architectury-forge:${architectury_version}")
 }
+jar {
+    duplicatesStrategy(DuplicatesStrategy.FAIL)
+}
 
 jar {
     manifest {
